--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link rel="stylesheet" href="style/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Job Listings</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,178 +16,192 @@
   </style>
 </head>
 <body>
-  <!-- Item Start -->
-  Photosnap
-  New!
-  Featured
-  Senior Frontend Developer
-  1d ago
-  Full Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Senior
-  <!-- Languages -->
-  HTML
-  CSS
-  JavaScript
-  <!-- Item End -->
+  <header class="c-header"></header>
+  <main>
+    <div class="c-card l-item">
+      <!-- Item Start -->
+      <div class="l-item__logo"><img class="c-card__logo" src="images/photosnap.svg" alt="photosnap logo"></div>
+      <div class="l-item__detail">
+        <h2 class="c-card__company">Photosnap</h2>
+        <p class="c-card__new">New!</p>
+        <p class="c-card__featured">Featured</p>
+        <h1 class="c-card__position">Senior Frontend Developer</h1>
+        <ul>
+          <li class="c-card__postedAt"><p>1d ago</p></li>
+          <li class="c-card__contract"><p>Full Time</p></li>
+          <li class="c-card__location"><p>USA only</p></li>
+        </ul>
+      </div>
+      <div class="l-item__tags">
+        <ul class="c-card__tags">
+          <!-- Role -->
+          <li class="h-tag" data-role="frontend"><p>Frontend</p></li>
+          <!-- Level -->
+          <li class="h-tag" data-level="senior"><p>Senior</p></li>
+          <!-- Languages -->
+          <li class="h-tag" data-languages="html"><p>HTML</p></li>
+          <li class="h-tag" data-languages="css"><p>CSS</p></li>
+          <li class="h-tag" data-languages="javascript"><p>JavaScript</p></li>
+        </ul>
+      </div>
+      <!-- Item End -->
+    </div>
 
-  <!-- Item Start -->
-  Manage
-  New!
-  Featured
-  Fullstack Developer
-  1d ago
-  Part Time
-  Remote
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  Python
-  <!-- Tools -->
-  React
-  <!-- Item End -->
+    <!-- Item Start -->
+    Manage
+    New!
+    Featured
+    Fullstack Developer
+    1d ago
+    Part Time
+    Remote
+    <!-- Role -->
+    Fullstack
+    <!-- Level -->
+    Midweight
+    <!-- Languages -->
+    Python
+    <!-- Tools -->
+    React
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  Account
-  New!
-  Junior Frontend Developer
-  2d ago
-  Part Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  React
-  Sass
-  <!-- Item End -->
+    <!-- Item Start -->
+    Account
+    New!
+    Junior Frontend Developer
+    2d ago
+    Part Time
+    USA only
+    <!-- Role -->
+    Frontend
+    <!-- Level -->
+    Junior
+    <!-- Languages -->
+    JavaScript
+    <!-- Tools -->
+    React
+    Sass
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  MyHome
-  Junior Frontend Developer
-  5d ago
-  Contract
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  CSS
-  JavaScript
-  <!-- Item End -->
+    <!-- Item Start -->
+    MyHome
+    Junior Frontend Developer
+    5d ago
+    Contract
+    USA only
+    <!-- Role -->
+    Frontend
+    <!-- Level -->
+    Junior
+    <!-- Languages -->
+    CSS
+    JavaScript
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  Loop Studios
-  Software Engineer
-  1w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  JavaScript
-  Ruby
-  <!-- Tools -->
-  Sass
-  <!-- Item End -->
+    <!-- Item Start -->
+    Loop Studios
+    Software Engineer
+    1w ago
+    Full Time
+    Worldwide
+    <!-- Role -->
+    Fullstack
+    <!-- Level -->
+    Midweight
+    <!-- Languages -->
+    JavaScript
+    Ruby
+    <!-- Tools -->
+    Sass
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  FaceIt
-  Junior Backend Developer
-  2w ago
-  Full Time
-  UK only
-  <!-- Role -->
-  Backend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  Ruby
-  <!-- Tools -->
-  RoR
-  <!-- Item End -->
+    <!-- Item Start -->
+    FaceIt
+    Junior Backend Developer
+    2w ago
+    Full Time
+    UK only
+    <!-- Role -->
+    Backend
+    <!-- Level -->
+    Junior
+    <!-- Languages -->
+    Ruby
+    <!-- Tools -->
+    RoR
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  Shortly
-  Junior Developer
-  2w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  HTML
-  JavaScript
-  <!-- Tools -->
-  Sass
-  <!-- Item End -->
+    <!-- Item Start -->
+    Shortly
+    Junior Developer
+    2w ago
+    Full Time
+    Worldwide
+    <!-- Role -->
+    Frontend
+    <!-- Level -->
+    Junior
+    <!-- Languages -->
+    HTML
+    JavaScript
+    <!-- Tools -->
+    Sass
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  Insure
-  Junior Frontend Developer
-  2w ago
-  Full Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  Vue
-  Sass
-  <!-- Item End -->
+    <!-- Item Start -->
+    Insure
+    Junior Frontend Developer
+    2w ago
+    Full Time
+    USA only
+    <!-- Role -->
+    Frontend
+    <!-- Level -->
+    Junior
+    <!-- Languages -->
+    JavaScript
+    <!-- Tools -->
+    Vue
+    Sass
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  Eyecam Co.
-  Full Stack Engineer
-  3w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  JavaScript
-  Python
-  <!-- Tools -->
-  Django
-  <!-- Item End -->
+    <!-- Item Start -->
+    Eyecam Co.
+    Full Stack Engineer
+    3w ago
+    Full Time
+    Worldwide
+    <!-- Role -->
+    Fullstack
+    <!-- Level -->
+    Midweight
+    <!-- Languages -->
+    JavaScript
+    Python
+    <!-- Tools -->
+    Django
+    <!-- Item End -->
 
-  <!-- Item Start -->
-  The Air Filter Company
-  Front-end Dev
-  1mo ago
-  Part Time
-  Worldwide
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  React
-  Sass
-  <!-- Item End -->
-  
+    <!-- Item Start -->
+    The Air Filter Company
+    Front-end Dev
+    1mo ago
+    Part Time
+    Worldwide
+    <!-- Role -->
+    Frontend
+    <!-- Level -->
+    Junior
+    <!-- Languages -->
+    JavaScript
+    <!-- Tools -->
+    React
+    Sass
+    <!-- Item End -->
+  </main>
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
