--- a/index.html
+++ b/index.html
@@ -8,15 +8,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Job Listings</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  <header class="c-header"></header>
+  <header><div class="c-header"></div></header>
   <main>
     <div class="c-card l-item">
       <!-- Item Start -->
