completed desktop styling of list items

--- a/index.html
+++ b/index.html
@@ -13,105 +13,164 @@
   <header><div class="c-header"></div></header>
   <main>
     <div class="l-table">
-      <div class="c-card l-item">
-        <!-- Item Start -->
-        <div class="l-item__detail">
-          <div class="l-item__logo"><img class="c-card__logo" src="images/photosnap.svg" alt="photosnap logo"></div>
-          <div class="l-item__row row1">
-            <h2 class="c-card__company">Photosnap</h2>
-            <p class="c-card__new">New!</p>
-            <p class="c-card__featured">Featured</p>
+      <!-- Item Start -->
+      <div class="l-item">
+        <div class="c-card featured">
+          <div class="l-item__detail">
+            <div class="l-item__logo"><img class="c-card__logo" src="images/photosnap.svg" alt="photosnap logo"></div>
+            <div class="l-item__row row1">
+              <h2 class="c-card__company">Photosnap</h2>
+              <p class="c-card__new">New!</p>
+              <p class="c-card__featured">Featured</p>
+            </div>
+            <div class="l-item__row row2"><h1 class="c-card__position">Senior Frontend Developer</h1></div>
+            <ul class="l-item__row row3 details">
+              <li class="c-card__postedAt"><p>1d ago</p></li>
+              <li class="c-card__contract"><p>Full Time</p></li>
+              <li class="c-card__location"><p>USA only</p></li>
+            </ul>
           </div>
-          <div class="l-item__row row2"><h1 class="c-card__position">Senior Frontend Developer</h1></div>
-          <ul class="l-item__row row3">
-            <li class="c-card__postedAt"><p>1d ago</p></li>
-            <li class="c-card__contract"><p>Full Time</p></li>
-            <li class="c-card__location"><p>USA only</p></li>
-          </ul>
+          <div class="l-item__tags">
+            <ul class="c-card__tags">
+              <!-- Role -->
+              <li class="c-tag" data-role="frontend"><p>Frontend</p></li>
+              <!-- Level -->
+              <li class="c-tag" data-level="senior"><p>Senior</p></li>
+              <!-- Languages -->
+              <li class="c-tag" data-languages="html"><p>HTML</p></li>
+              <li class="c-tag" data-languages="css"><p>CSS</p></li>
+              <li class="c-tag" data-languages="javascript"><p>JavaScript</p></li>
+            </ul>
+          </div>
         </div>
-        <div class="l-item__tags">
-          <ul class="c-card__tags">
-            <!-- Role -->
-            <li class="h-tag" data-role="frontend"><p>Frontend</p></li>
-            <!-- Level -->
-            <li class="h-tag" data-level="senior"><p>Senior</p></li>
-            <!-- Languages -->
-            <li class="h-tag" data-languages="html"><p>HTML</p></li>
-            <li class="h-tag" data-languages="css"><p>CSS</p></li>
-            <li class="h-tag" data-languages="javascript"><p>JavaScript</p></li>
-          </ul>
-        </div>
-        <!-- Item End -->
       </div>
+      <!-- Item End -->
+      <!-- Item Start -->
+      <div class="l-item">
+        <div class="c-card featured">
+          <div class="l-item__detail">
+            <div class="l-item__logo"><img class="c-card__logo" src="images/manage.svg" alt="manage logo"></div>
+            <div class="l-item__row row1">
+              <h2 class="c-card__company">Manage</h2>
+              <p class="c-card__new">New!</p>
+              <p class="c-card__featured">Featured</p>
+            </div>
+            <div class="l-item__row row2"><h1 class="c-card__position">Fullstack Developer</h1></div>
+            <ul class="l-item__row row3 details">
+              <li class="c-card__postedAt"><p>1d ago</p></li>
+              <li class="c-card__contract"><p>Part Time</p></li>
+              <li class="c-card__location"><p>Remote</p></li>
+            </ul>
+          </div>
+          <div class="l-item__tags">
+            <ul class="c-card__tags">
+              <!-- Role -->
+              <li class="c-tag" data-role="fullstack"><p>Fullstack</p></li>
+              <!-- Level -->
+              <li class="c-tag" data-level="midweight"><p>Midweight</p></li>
+              <!-- Languages -->
+              <li class="c-tag" data-languages="python"><p>Python</p></li>
+              <!-- Tools -->
+              <li class="c-tag" data-tools="react"><p>React</p></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Item End -->
+      <!-- Item Start -->
+      <div class="l-item">
+        <div class="c-card">
+          <div class="l-item__detail">
+            <div class="l-item__logo"><img class="c-card__logo" src="images/account.svg" alt="account logo"></div>
+            <div class="l-item__row row1">
+              <h2 class="c-card__company">Account</h2>
+              <p class="c-card__new">New!</p>
+            </div>
+            <div class="l-item__row row2"><h1 class="c-card__position">Junior Frontend Developer</h1></div>
+            <ul class="l-item__row row3 details">
+              <li class="c-card__postedAt"><p>2d ago</p></li>
+              <li class="c-card__contract"><p>Part Time</p></li>
+              <li class="c-card__location"><p>USA only</p></li>
+            </ul>
+          </div>
+          <div class="l-item__tags">
+            <ul class="c-card__tags">
+              <!-- Role -->
+              <li class="c-tag" data-role="frontend"><p>Frontend</p></li>
+              <!-- Level -->
+              <li class="c-tag" data-level="junior"><p>Junior</p></li>
+              <!-- Languages -->
+              <li class="c-tag" data-languages="javascript"><p>JavaScript</p></li>
+              <li class="c-tag" data-tools="react"><p>React</p></li>
+              <li class="c-tag" data-tools="sass"><p>Sass</p></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Item End -->
+      <!-- Item Start -->
+      <div class="l-item">
+        <div class="c-card">
+          <div class="l-item__detail">
+            <div class="l-item__logo"><img class="c-card__logo" src="images/myhome.svg" alt="myhome logo"></div>
+            <div class="l-item__row row1">
+              <h2 class="c-card__company">MyHome</h2>
+            </div>
+            <div class="l-item__row row2"><h1 class="c-card__position">Junior Frontend Developer</h1></div>
+            <ul class="l-item__row row3 details">
+              <li class="c-card__postedAt"><p>5d ago</p></li>
+              <li class="c-card__contract"><p>Contract</p></li>
+              <li class="c-card__location"><p>USA only</p></li>
+            </ul>
+          </div>
+          <div class="l-item__tags">
+            <ul class="c-card__tags">
+              <!-- Role -->
+              <li class="c-tag" data-role="frontend"><p>Frontend</p></li>
+              <!-- Level -->
+              <li class="c-tag" data-level="junior"><p>Junior</p></li>
+              <!-- Languages -->
+              <li class="c-tag" data-languages="css"><p>CSS</p></li>
+              <li class="c-tag" data-languages="javascript"><p>JavaScript</p></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Item End -->
+      <!-- Item Start -->
+      <div class="l-item">
+        <div class="c-card">
+          <div class="l-item__detail">
+            <div class="l-item__logo"><img class="c-card__logo" src="images/loop-studios.svg" alt="loop studios logo"></div>
+            <div class="l-item__row row1">
+              <h2 class="c-card__company">Loop Studios</h2>
+            </div>
+            <div class="l-item__row row2"><h1 class="c-card__position">Junior Frontend Developer</h1></div>
+            <ul class="l-item__row row3 details">
+              <li class="c-card__postedAt"><p>1w ago</p></li>
+              <li class="c-card__contract"><p>Full Time</p></li>
+              <li class="c-card__location"><p>Worldwide</p></li>
+            </ul>
+          </div>
+          <div class="l-item__tags">
+            <ul class="c-card__tags">
+              <!-- Role -->
+              <li class="c-tag" data-role="fullstack"><p>Fullstack</p></li>
+              <!-- Level -->
+              <li class="c-tag" data-level="midweight"><p>Midweight</p></li>
+              <!-- Languages -->
+              <li class="c-tag" data-languages="javascript"><p>JavaScript</p></li>
+              <li class="c-tag" data-languages="ruby"><p>Ruby</p></li>
+              <!-- Tools -->
+              <li class="c-tag" data-tools="sass"><p>Sass</p></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Item End -->
     </div>
+    <!-- List End -->
 <div class="hidden">
-  <!-- Item Start -->
-      Manage
-      New!
-      Featured
-      Fullstack Developer
-      1d ago
-      Part Time
-      Remote
-      <!-- Role -->
-      Fullstack
-      <!-- Level -->
-      Midweight
-      <!-- Languages -->
-      Python
-      <!-- Tools -->
-      React
-      <!-- Item End -->
-
-      <!-- Item Start -->
-      Account
-      New!
-      Junior Frontend Developer
-      2d ago
-      Part Time
-      USA only
-      <!-- Role -->
-      Frontend
-      <!-- Level -->
-      Junior
-      <!-- Languages -->
-      JavaScript
-      <!-- Tools -->
-      React
-      Sass
-      <!-- Item End -->
-
-      <!-- Item Start -->
-      MyHome
-      Junior Frontend Developer
-      5d ago
-      Contract
-      USA only
-      <!-- Role -->
-      Frontend
-      <!-- Level -->
-      Junior
-      <!-- Languages -->
-      CSS
-      JavaScript
-      <!-- Item End -->
-
-      <!-- Item Start -->
-      Loop Studios
-      Software Engineer
-      1w ago
-      Full Time
-      Worldwide
-      <!-- Role -->
-      Fullstack
-      <!-- Level -->
-      Midweight
-      <!-- Languages -->
-      JavaScript
-      Ruby
-      <!-- Tools -->
-      Sass
-      <!-- Item End -->
 
       <!-- Item Start -->
       FaceIt
