--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <body>
   <header><div class="c-header"></div></header>
   <main>
+    <div class="list-filters">
+    </div>
+    <div class="spacer-filters show"></div>
     <div class="l-table"></div>
   </main>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="scripts/script-min.js"></script>
 </body>
 </html>
