refined and commented js, added clear all filters functionality

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
   <header><div class="c-header"></div></header>
   <main>
-    <div class="list-filters">
-    </div>
+    <div class="list-filters"><ul></ul><div class='clear-filters'>Clear</div></div>
     <div class="spacer-filters show"></div>
     <div class="l-table"></div>
   </main>
