adding banner files and script links

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style/styles.css">
+  <link rel="stylesheet" href="style/banner.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
   <title>Filtered List</title>
@@ -18,5 +19,6 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="scripts/script-min.js"></script>
+  <script src="scripts/banner.js"></script>
 </body>
 </html>
