adding fontawesome script

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="style/styles.css">
   <link rel="stylesheet" href="style/banner.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-
+  <script src="https://kit.fontawesome.com/3ad2a23632.js" crossorigin="anonymous"></script>
+  
   <title>Filtered List</title>
 </head>
 <body>
