--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style/styles.css">
-  <link rel="stylesheet" href="style/banner.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <script src="https://kit.fontawesome.com/3ad2a23632.js" crossorigin="anonymous"></script>
   
   <title>Filtered List</title>
+
+  <!-- FEM Info Banner -->
+  <link rel="stylesheet" href="https://www.ivanweller.codes/shared/fem-info-banner/styles.css">
+  <script src="https://www.ivanweller.codes/shared/fem-info-banner/scripts.js"></script>
+  
 </head>
 <body>
   <header><div class="c-header"></div></header>
@@ -20,6 +24,5 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="scripts/script-min.js"></script>
-  <script src="scripts/banner.js"></script>
 </body>
 </html>
