--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- FEM Info Banner -->
   <link rel="stylesheet" href="https://www.ivanweller.codes/shared/fem-info-banner/styles.css">
-  <script src="https://www.ivanweller.codes/shared/fem-info-banner/scripts.js"></script>
+  <script src="https://www.ivanweller.codes/shared/fem-info-banner/scripts.js" defer></script>
   
 </head>
 <body>
