adding banner url

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <!-- FEM Info Banner -->
   <link rel="stylesheet" href="https://www.ivanweller.codes/shared/fem-info-banner/styles.css">
-  <script src="https://www.ivanweller.codes/shared/fem-info-banner/scripts.js" defer></script>
+  <script src="https://www.ivanweller.codes/shared/fem-info-banner/scripts-min.js" data-url="https://www.frontendmentor.io/solutions/job-listings-generated-from-json-file-M1hbUL2_t" defer></script>
   
   <link rel="stylesheet" href="style/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
